<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeaToday</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tea_type">Tea Type</string>
    <string name="find_tea_button">Yum!</string>
    <string name="tea_type_dialog_title">Choose Your Tea type!</string>
    <string name="milk">Milk</string>
    <string name="latte">Latte</string>
    <string name="jelly">Jelly</string>
    <string name="tapioca_pearl">Tapioca Pearl</string>
    <string name="herb">Herb</string>
    <string name="hot">Hot</string>
    <string name="cold">Cold</string>
    <string name="title_activity_intro_animation">IntroAnimation</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
