<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/CheckBoxLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/teaTypeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/tea_type" />

            <CheckBox
                android:id="@+id/milkCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/milk" />

            <CheckBox
                android:id="@+id/latteCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/latte" />

            <CheckBox
                android:id="@+id/hotCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/hot" />

            <CheckBox
                android:id="@+id/coldCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/cold" />

            <CheckBox
                android:id="@+id/jellyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/jelly" />

            <CheckBox
                android:id="@+id/herbCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/herb" />

            <CheckBox
                android:id="@+id/tapiocaPearlCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="choosePreferences"
                android:text="@string/tapioca_pearl" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/story001" />
    </LinearLayout>

    <Button
        android:id="@+id/findTeaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="randomTeaGenerator"
        android:text="@string/find_tea_button"/>

    <LinearLayout
        android:id="@+id/TeaInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/teaInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Tea Preferences:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/story002" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TeaInfoDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/teaTypeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/milkText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/latteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <TextView
                android:id="@+id/hotOrColdText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/jellyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/herbText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/tapiocaPearlText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>